Fixed tab jumping.

--- a/assets/less/delightful-downloads-admin.less
+++ b/assets/less/delightful-downloads-admin.less
@@ -494,6 +494,14 @@
 /* Settings page */
 .dedo_download_page_dedo_settings .nav-tab-wrapper {
 	margin-bottom: 0;
+
+	.nav-tab {
+		border-bottom: 1px solid #ccc; /* Fix tab jumping */
+	}
+
+	.nav-tab-active {
+		border-bottom: 1px solid #f1f1f1;
+	}
 }
 
 .dedo_download_page_dedo_settings #dedo-settings-main {
